@@ -15,6 +15,7 @@ export(ctDensity)
 export(ctDiscretePars)
 export(ctFit)
 export(ctGenerate)
+export(ctGenerateFromFit)
 export(ctIndplot)
 export(ctIntervalise)
 export(ctKalman)
@@ -24,11 +25,13 @@ export(ctMultigroupFit)
 export(ctPlot)
 export(ctPlotArray)
 export(ctPoly)
+export(ctPostPredict)
 export(ctRefineTo)
 export(ctStanContinuousPars)
 export(ctStanDiscretePars)
 export(ctStanDiscreteParsPlot)
 export(ctStanFit)
+export(ctStanFitTV)
 export(ctStanKalman)
 export(ctStanKalmanPlot)
 export(ctStanModel)
