@@ -3,6 +3,15 @@ ctsem news:
 Known bugs / limitations:
 - Duplicated parameter names in a ctStanFit model may in certain cases generate compilation errors.
 
+Fixes:
+- Time dependent predictors generated errors with the frequentist Kalman filter form.
+
+Features:
+- ctGenerateFromFit generates data based on a model fitted with ctFit.
+- ctPostPredict generates distributions from data based on a model fitted with ctFit
+and plots this against the original data.
+
+
 6/4/2017
 #### 2.3.1 ####
 Fixes:
